--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "homepage": "https://github.com/marcelogaldino/donate#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "nunjucks": "^3.2.0"
+    "nunjucks": "^3.2.0",
+    "pg": "^7.18.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
